--- a/index.html
+++ b/index.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Celular </title>
+    <meta name="ebilyn" content="width=device-width, initial-scale=1.0">
+    <title> Cell center </title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="cabecalho">
-        <h1 class="titulo-principal">Isso é um titulo</h1>
+        <img src="img/logo.png" alt="" class="cabecalho-img">
+        <nav class="cabecalho">
+            <a class="cabecalho-nav__link" href="#">Home</a>
+            <a class="cabecalho-nav__limk" href="#">Contato</a>
+        </nav>
     </header>
     <main class="principal">
+        <section class="principal-capa">
+            <div class="principal-capa_conteudo">
+                <h1 class="principal-capa__titulo"> O melhor lugar pra voce comprar um celular. </h1>
+                <p class="principal-capa__texto"> O Cell Center proporciona celulares de maior qualidade e o melhor preço que voce nunca viu em outro luga. </p>
 
-    </main>
+                </h1>
+
+            </div>
+
+        </section>
+
+    </main>]
     <footer class="rodape">
 
     </footer>
 </body>
+
 </html>
