--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="ebilyn" content="width=device-width, initial-scale=1.0">
-    <title> Cell center </title>
+    <title> Cell Center </title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,23 +13,21 @@
     <header class="cabecalho">
         <img src="img/logo.png" alt="" class="cabecalho-img">
         <nav class="cabecalho">
-            <a class="cabecalho-nav__link" href="#">Home</a>
-            <a class="cabecalho-nav__limk" href="#">Contato</a>
+            <a class="cabecalho-nav_link" href="#">Home</a>
+            <a class="cabecalho-nav_link" href="#">Contato</a>
         </nav>
     </header>
     <main class="principal">
         <section class="principal-capa">
             <div class="principal-capa_conteudo">
                 <h1 class="principal-capa__titulo"> O melhor lugar pra voce comprar um celular. </h1>
-                <p class="principal-capa__texto"> O Cell Center proporciona celulares de maior qualidade e o melhor preço que voce nunca viu em outro luga. </p>
-
-                </h1>
-
+                <p class="principal-capa__texto"> O Cell Center proporciona celulares de maior qualidade e o melhor
+                    preço que voce nunca viu em outro lugar. </p>
             </div>
-
+            <img class="principal-capa__imagem" src="img/logo.png" alt="">
         </section>
 
-    </main>]
+    </main>
     <footer class="rodape">
 
     </footer>
