--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
     </header>
     <main class="principal">
         <section class="principal-capa">
-            <div class="principal-capa_conteudo">
-                <h1 class="principal-capa__titulo"> O melhor lugar pra voce comprar um celular. </h1>
-                <p class="principal-capa__texto"> O Cell Center proporciona celulares de maior qualidade e o melhor
-                    preço que voce nunca viu em outro lugar. </p>
+            <div class="principal-capa__combotao">
+                <div class="principal-capa_conteudo">
+                    <h1 class="principal-capa__titulo"> O melhor lugar pra voce comprar um celular. </h1>
+                    <p class="principal-capa__texto"> O Cell Center proporciona celulares de maior qualidade e o melhor
+                        preço que voce nunca viu em outro lugar. </p>
+                </div>
+                <a href="#" class="principal-capa__botao">Compre aqui!</a>
             </div>
             <img class="principal-capa__imagem" src="img/logo.png" alt="">
         </section>
-
     </main>
     <footer class="rodape">
 
