--- a/index.html
+++ b/index.html
@@ -26,8 +26,16 @@
                         preço que voce nunca viu em outro lugar. </p>
                 </div>
                 <a href="#" class="principal-capa__botao">Compre aqui!</a>
+                <a href="#" class="principal-capa__botao botao__secundario">Melhor opção.</a>
             </div>
             <img class="principal-capa__imagem" src="img/logo.png" alt="">
+        </section>
+        <section class="propaganda propaganda01">
+            <img class="propaganda__imagem imagem01" src="img/img.jpg" alt="Celulares que voce nunca viu.">;
+            <div class="propaganda__conteudo">
+                <h2 class="propaganda__titulo">Porque escolher em Cell Center?</h2>
+                <p class="propaganda__texto">Escolhas rapidas, melhores celulares e a melhor para economir.</p>
+            </div>
         </section>
     </main>
     <footer class="rodape">
