--- a/index.html
+++ b/index.html
@@ -37,6 +37,29 @@
                 <p class="propaganda__texto">Escolhas rapidas, melhores celulares e a melhor para economir.</p>
             </div>
         </section>
+        <section class="propaganda02">
+            <img class="propaganda__imagem02" src="img/img01.jpg">
+
+
+
+        </section>
+        <section class="dispositivos">
+            <h2 class="dispositivos__titulo"></h2>
+            <ul class="dispositivos__lista">
+                <li>
+                    <img src="img/tv.svg" alt="icone de televisão">
+                    <h3 class="lista__item">TV</h3>
+                </li>
+                <li>
+                    <img src="img/computador.svg" alt="icone computador">
+                    <h3 class="lista__item">Computadores</h3>
+                </li>
+                <li>
+                    <img src="img/celular.svg" alt="icone de celular">
+                    <h3 class="lista__item"> Celulares e Tablets</h3>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer class="rodape">
 
