--- a/index.html
+++ b/index.html
@@ -31,23 +31,28 @@
             <img class="principal-capa__imagem" src="img/logo.png" alt="">
         </section>
         <section class="propaganda propaganda01">
-            <img class="propaganda__imagem imagem01" src="img/img.jpg" alt="Celulares que voce nunca viu.">;
+            <img class="propaganda__imagem imagem01" src="img/img.jpg" alt="Celulares que voce nunca viu.">
             <div class="propaganda__conteudo">
                 <h2 class="propaganda__titulo">Porque escolher em Cell Center?</h2>
                 <p class="propaganda__texto">Escolhas rapidas, melhores celulares e a melhor para economir.</p>
             </div>
         </section>
-        <section class="propaganda02">
+        <section class="propaganda propaganda02">
             <img class="propaganda__imagem02" src="img/img01.jpg">
-
-
-
+            <div clas="propaganda02">
+                <div class="propaganda__conteudo">
+                    <h2 class="propaganda__titulo">Posso fazer online?</h2>
+                    <p class="propaganda__texto">Compre aqui, vem la, troque por outras coisas.</p>
+                </div>
+                <a href="#" class="propaganda__botao principal-capa__botao"> Venha ver as qualidades dos nosso celulares.</a>
+            </div>
+            <img class="propaganda__imagem imagem02" src="img/casa2.png" alt="casa2"
         </section>
         <section class="dispositivos">
             <h2 class="dispositivos__titulo"></h2>
             <ul class="dispositivos__lista">
                 <li>
-                    <img src="img/tv.svg" alt="icone de televisão">
+                    <img src="img/tv.svg" alt="icone de televisao">
                     <h3 class="lista__item">TV</h3>
                 </li>
                 <li>
