--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <div clas="propaganda02">
                 <div class="propaganda__conteudo">
                     <h2 class="propaganda__titulo">Posso fazer online?</h2>
-                    <p class="propaganda__texto">Compre aqui, vem la, troque por outras coisas.</p>
+                    <p class="propaganda__texto">Compre aqui, vende ali, troque por outras coisas.</p>
                 </div>
                 <a href="#" class="propaganda__botao principal-capa__botao"> Venha ver as qualidades dos nosso celulares.</a>
             </div>
-            <img class="propaganda__imagem imagem02" src="img/casa2.png" alt="casa2"
+            <img class="propaganda__imagem imagem02" src="img/casa02.png" alt="casa2">
         </section>
         <section class="dispositivos">
             <h2 class="dispositivos__titulo"></h2>
